fix: handle overflow (#2553)
ref: MANAGER-4712

--- a/packages/manager/apps/hub/src/dashboard/dashboard.scss
+++ b/packages/manager/apps/hub/src/dashboard/dashboard.scss
@@ -3,7 +3,9 @@ hub-dashboard {
     background-color: #f5feff;
     color: #4d5592;
     position: absolute;
-    top: 45px;
+    top: 0;
+    left: 0;
     width: 100%;
+    z-index: 1;
   }
 }
